--- a/charts/identity-server/values.dev.yaml
+++ b/charts/identity-server/values.dev.yaml
@@ -79,8 +79,10 @@ identity-server:
     ASPNETCORE_URLS: 'http://*:5000'
     AWS__CloudWatch__AuditLogGroup: '/identity-server/audit-log'
     AWS__SystemsManager__ParameterStore__DataProtectionPrefix: '/k8s/identity-server/DataProtectionSecret'
+    Application__EnableDiagnosticsPage: 'true'
     Application__MinCompletionPortThreads: '10'
     AudkenniSettings__Retries: '24'
+    AudkenniSettings__Url: 'https://tqd75.audkenni.is:443/sso/'
     CORECLR_ENABLE_PROFILING: '1'
     CORECLR_PROFILER: '{846F5F1C-F9AE-4B07-969E-05C26BC060D8}'
     CORECLR_PROFILER_PATH: '/opt/datadog/Datadog.Trace.ClrProfiler.Native.so'
@@ -149,8 +151,8 @@ identity-server:
       cpu: '100m'
       memory: '128Mi'
   secrets:
-    AudkenniSettings__ClientId: '/k8s/identity-server/AudkenniClientId'
-    AudkenniSettings__ClientSecret: '/k8s/identity-server/AudkenniClientSecret'
+    AudkenniSettings__ClientId: '/k8s/identity-server-audkenni/AudkenniClientId'
+    AudkenniSettings__ClientSecret: '/k8s/identity-server-audkenni/AudkenniClientSecret'
     CONFIGCAT_SDK_KEY: '/k8s/configcat/CONFIGCAT_SDK_KEY'
     FeatureFlags__ConfigCatSdkKey: '/k8s/configcat/CONFIGCAT_SDK_KEY'
     IdentityServer__FakePersons: '/k8s/identity-server/FakePersons'
@@ -241,7 +243,7 @@ services-auth-api:
     DB_REPLICAS_HOST: 'dev-vidspyrna-aurora.cluster-ro-c6cxecmrvlpq.eu-west-1.rds.amazonaws.com'
     DB_USER: 'servicesauth'
     IDENTITY_SERVER_CLIENT_ID: '@island.is/clients/auth-api'
-    IDENTITY_SERVER_ISSUER_URL: 'https://identity-server.dev01.devland.is'
+    IDENTITY_SERVER_ISSUER_URL: 'https://audkenniv3-identity-server.dev01.devland.is'
     NODE_OPTIONS: '--max-old-space-size=464'
     PUBLIC_URL: 'https://identity-server.dev01.devland.is/api'
     SERVERSIDE_FEATURES_ON: ''
