feat: add firearm license category text

--- a/libs/clients/firearm-license/src/clientConfig.json
+++ b/libs/clients/firearm-license/src/clientConfig.json
@@ -96,6 +96,42 @@
           }
         }
       }
+    },
+    "/api/FirearmApplication/Categories": {
+      "get": {
+        "tags": ["FirearmApplication"],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": {
+                    "type": "string"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": {
+                    "type": "string"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
