--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -245,6 +245,9 @@
       "@island.is/application/templates/marriage-conditions": [
         "libs/application/templates/marriage-conditions/src/index.ts"
       ],
+      "@island.is/application/templates/marriage-conditions/types": [
+        "libs/application/templates/marriage-conditions/src/types.ts"
+      ],
       "@island.is/application/templates/meta-application": [
         "libs/application/templates/meta-application/src/index.ts"
       ],
