feat(marriage-conditions): Marriage conditions application template (#7279)
* initial commit

* first part of the application process + submission service setup

* format

* more screens for more roles

* dataschema and messages

* a tiny bit of cleanup

* institution mapper

* cleanup on witnesses

* Fixing access to missing artifacts

* a bit of an update

* changes in flow

* get marital status and block non married peopled

* fakeData

* clean up provider

* fakeData on DEV

* citizenship

* flow updates, personal info and more

* adding texts to messages

* texts

* cleanup

* fixing up a few issues

* updating done screen for the spouse and cleanup on types

* moving hardcoded strings to messages

* assign

* format and messages

* minor tweaks

* codeowners for template api

* tweak vol2

* schema revert on spouseApprove

* submit

* merge

* codeowners

* tweaks vol3

* format

* cleanup: formatting dates and phone numbers

* phones format (spouse)

* more cleanup

* marital status gendered

* linting

* format

* message

* rm cl

* linitng

* cleanup on unnecessary custom cmpt

* linitng

* a little cleanup on externalDataProviders

* return no await

* format

Co-authored-by: Petar Shomov <petar@andes.is>
Co-authored-by: Alexandra Diljá <alexandrab18@ru.is>

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -242,6 +242,12 @@
       "@island.is/application/templates/login-service": [
         "libs/application/templates/login-service/src/index.ts"
       ],
+      "@island.is/application/templates/marriage-conditions": [
+        "libs/application/templates/marriage-conditions/src/index.ts"
+      ],
+      "@island.is/application/templates/marriage-conditions/types": [
+        "libs/application/templates/marriage-conditions/src/types.ts"
+      ],
       "@island.is/application/templates/meta-application": [
         "libs/application/templates/meta-application/src/index.ts"
       ],
