feat: change schema operation?

--- a/libs/clients/smartsolutions/project.json
+++ b/libs/clients/smartsolutions/project.json
@@ -18,7 +18,7 @@
         "passWithNoTests": true
       }
     },
-    "schemas/codegen": {
+    "schemas/external-openapi-generator": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
         "command": "graphql-codegen --config libs/clients/smartsolutions/codegen.yml"
