--- a/apps/services/auth-api/project.json
+++ b/apps/services/auth-api/project.json
@@ -116,14 +116,11 @@
     "seed": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "command": "sequelize-cli db:seed:all",
-        "cwd": "libs/auth-api-lib"
-      }
-    },
-    "seed-local": {
-      "executor": "@nrwl/workspace:run-commands",
-      "options": {
-        "command": "sequelize-cli db:seed:all --seeders-path ./seeders/local",
+        "commands": [
+          "sequelize-cli db:seed:all --seeders-path ./seeders/local",
+          "sequelize-cli db:seed:all"
+        ],
+        "parallel": false,
         "cwd": "libs/auth-api-lib"
       }
     }
