chore(auth-api): Clean up deprecated supports_delegation (#8373)
* Add migration script to remove supports_delegation.
Fix local/seeders scripts.

* Update project.json seed commands and readme.

* Revert seed command to run both local and seeds. Remove seeds returning promise.resolve.

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/apps/services/auth-api/project.json
+++ b/apps/services/auth-api/project.json
@@ -120,6 +120,7 @@
           "sequelize-cli db:seed:all --seeders-path ./seeders/local",
           "sequelize-cli db:seed:all"
         ],
+        "parallel": false,
         "cwd": "libs/auth-api-lib"
       }
     }
