feat: add header download async to get right pkpassuri, bump version

--- a/apps/native/app/package.json
+++ b/apps/native/app/package.json
@@ -32,6 +32,7 @@
     "dotenv": "*",
     "js-base64": "*",
     "@formatjs/intl-numberformat": "*",
-    "graphql": "*"
+    "graphql": "*",
+    "@formatjs/intl-locale": "*"
   }
 }
