Upgrade to Yarn Berry
Upgrade node to 18
Upgrade Typescript to 4.4.2

--- a/apps/auth-admin-web/tsconfig.json
+++ b/apps/auth-admin-web/tsconfig.json
@@ -3,13 +3,23 @@
   "compilerOptions": {
     "jsx": "preserve",
     "allowJs": true,
-    "types": ["node", "jest"],
+    "types": [
+      "node",
+      "jest"
+    ],
     "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "incremental": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "next-env.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
