--- a/apps/financial-aid/web-veita/tsconfig.json
+++ b/apps/financial-aid/web-veita/tsconfig.json
@@ -6,10 +6,13 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "incremental": true
   },
   "include": [],
-  "exclude": ["node_modules"],
+  "exclude": [
+    "node_modules"
+  ],
   "files": [],
   "references": [
     {
