--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,10 +7,13 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "incremental": true
   },
   "include": [],
-  "exclude": ["node_modules"],
+  "exclude": [
+    "node_modules"
+  ],
   "files": [],
   "references": [
     {
