--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "npm": "please-use-yarn",
     "node": "^14.17",
-    "yarn": "^1.22"
+    "yarn": "^3.2"
   },
   "repository": {
     "type": "git",
@@ -49,12 +49,12 @@
     "ts-node": "cross-env ts-node -r tsconfig-paths/register -O '{\\\"module\\\":\\\"commonjs\\\",\\\"esModuleInterop\\\":true}'",
     "openapi-generator": "openapi-generator generate -g typescript-fetch --additional-properties=typescriptThreePlus=true",
     "schemas": "node ./scripts/schemas.js",
-    "postinstall": "node -e 'process.exit(process.env.CI || process.env.SKIP_POSTINSTALL ? 0 : 1);' || node ./scripts/postinstall.js",
     "gitbook": "node ./scripts/gitbook.js",
     "charts": "cd ./infra && yarn charts"
   },
   "dependencies": {
     "@apollo/client": "3.1.3",
+    "@apollo/subgraph": "^2.1.1",
     "@aws-sdk/client-sqs": "3.41.0",
     "@aws-sdk/credential-provider-node": "3.49.0",
     "@contentful/forma-36-react-components": "3.78.4",
@@ -71,12 +71,13 @@
     "@hookform/error-message": "0.0.5",
     "@island.is/login": "1.2.1",
     "@island.is/regulations-tools": "0.7.8",
+    "@nestjs/apollo": "^10.1.0",
     "@nestjs/axios": "0.0.7",
     "@nestjs/bull": "0.1.2",
     "@nestjs/common": "8.4.4",
     "@nestjs/config": "0.5.0",
     "@nestjs/core": "8.4.4",
-    "@nestjs/graphql": "7.9.11",
+    "@nestjs/graphql": "10.1.1",
     "@nestjs/jwt": "7.1.0",
     "@nestjs/passport": "7.1.0",
     "@nestjs/platform-express": "8.4.5",
@@ -95,6 +96,7 @@
     "@storybook/core-server": "6.5.8",
     "@storybook/manager-webpack5": "6.5.8",
     "@types/faker": "5.5.3",
+    "@types/graphql": "^14.5.0",
     "@types/nodemailer": "6.4.1",
     "@types/passport-jwt": "3.0.3",
     "@types/pdfkit": "0.11.2",
@@ -169,7 +171,7 @@
     "formik": "2.2.9",
     "framer-motion": "4.1.3",
     "glob": "7.1.6",
-    "graphql": "15.3.0",
+    "graphql": "16.6.0",
     "graphql-tag": "2.12.5",
     "graphql-type-json": "0.3.2",
     "handlebars": "4.7.7",
@@ -206,6 +208,7 @@
     "next-auth": "3.29.10",
     "next-cookies": "2.0.3",
     "node-fetch": "2.6.7",
+    "node-gyp": "^9.1.0",
     "nodemailer": "6.7.2",
     "oidc-client-ts": "2.0.3",
     "openapi3-ts": "2.0.0",
@@ -389,7 +392,7 @@
     "cypress": "10.6.0",
     "cypress-file-upload": "5.0.8",
     "dotenv": "14.3.2",
-    "esbuild": "0.12.1",
+    "esbuild": "^0.15.7",
     "eslint": "8.12.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "8.1.0",
@@ -419,9 +422,10 @@
     "storybook-addon-designs": "6.2.1",
     "ts-dedent": "2.0.0",
     "ts-jest": "27.0.5",
+    "ts-morph": "^16.0.0",
     "ts-node": "10.2.1",
     "type-fest": "1.1.3",
-    "typescript": "4.3.5",
+    "typescript": "4.4.2",
     "webpack-bundle-analyzer": "4.5.0"
   },
   "resolutions": {
@@ -441,12 +445,6 @@
     "lodash": "4.17.21",
     "trim": "0.0.3",
     "node-fetch": "2.6.7",
-    "css-loader/**/postcss": "npm:@island.is/postcss@107.0.37",
-    "**/@storybook/builder-webpack4/**/postcss": "npm:@island.is/postcss@107.0.37",
-    "@jeremybarbet/contentful-extension-scripts/**/serialize-to-js": "3.1.1",
-    "@jeremybarbet/contentful-extension-scripts/**/postcss": "npm:@island.is/postcss@107.0.37",
-    "@jeremybarbet/contentful-extension-scripts/parcel-bundler/node-forge": "1.2.1",
-    "**/configcat-js/**/configcat-common": "4.4.2",
     "browserslist": "4.16.6",
     "ws": "8.8.0",
     "css-what": "5.0.1",
@@ -460,7 +458,7 @@
     "path-parse": "1.0.7"
   },
   "volta": {
-    "node": "14.17.6",
-    "yarn": "1.22.19"
+    "node": "18.8.0",
+    "yarn": "3.2.3"
   }
 }
