--- a/scripts/ci/Dockerfile
+++ b/scripts/ci/Dockerfile
@@ -1,6 +1,6 @@
 # This is a multi-stage Dockerfile which contains all CI-related operations as well as images to be deployed in production
 ARG DOCKER_IMAGE_REGISTRY=public.ecr.aws
-FROM $DOCKER_IMAGE_REGISTRY/docker/library/node:14.19.0-alpine3.14 as deps
+FROM $DOCKER_IMAGE_REGISTRY/docker/library/node:18-alpine3.15 as deps
 
 RUN apk add -U git
 
@@ -24,7 +24,7 @@ ENV NODE_OPTIONS="--max-old-space-size=4096"
 
 RUN yarn run build ${APP} --prod
 
-FROM $DOCKER_IMAGE_REGISTRY/docker/library/node:14.19.0-alpine3.14 as output-base
+FROM $DOCKER_IMAGE_REGISTRY/docker/library/node:18-alpine3.15 as output-base
 # this is base image for containers that are to be deployed
 ARG GIT_BRANCH
 ARG GIT_SHA
@@ -105,7 +105,7 @@ USER runner
 
 CMD [ "jest", "main.spec.js" ]
 
-FROM cypress/base:14.17.6 as cypress-base
+FROM DOCKER_IMAGE_REGISTRY/cypress-io/cypress/base:18.6.0 as cypress-base
 
 USER root
 RUN id
