Upgrade apollo-server-express & graphql-codegen

--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "apollo-link-retry": "2.2.16",
     "apollo-server-cache-redis": "1.2.1",
     "apollo-server-env": "2.4.5",
-    "apollo-server-express": "2.14.3",
+    "apollo-server-express": "^3.10.2",
     "apollo-server-plugin-base": "0.9.0",
     "apollo-server-plugin-response-cache": "0.5.3",
     "aws-elasticsearch-connector": "9.0.0",
@@ -299,13 +299,13 @@
     "@babel/preset-react": "7.17.12",
     "@babel/preset-typescript": "7.17.12",
     "@gperdomor/nx-docker": "0.2.3",
-    "@graphql-codegen/cli": "1.17.8",
-    "@graphql-codegen/fragment-matcher": "1.17.8",
-    "@graphql-codegen/schema-ast": "1.17.8",
-    "@graphql-codegen/typescript": "1.17.8",
-    "@graphql-codegen/typescript-operations": "1.17.15",
-    "@graphql-codegen/typescript-react-apollo": "1.17.7",
-    "@graphql-codegen/typescript-resolvers": "1.17.9",
+    "@graphql-codegen/cli": "^2.12.0",
+    "@graphql-codegen/fragment-matcher": "^3.3.1",
+    "@graphql-codegen/schema-ast": "^2.5.1",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
+    "@graphql-codegen/typescript-resolvers": "^2.7.3",
     "@jeremybarbet/contentful-extension-scripts": "0.22.7",
     "@nestjs/schematics": "8.0.10",
     "@nestjs/testing": "8.4.4",
